--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <ul>
                 <li><a  href="https://furkantuncel55.github.io/YAREN-FURKAN/" target="_blank">ANASAYFA </a></li>
                 <li><a href="https://furkantuncel55.github.io/YAREN-FURKAN-Hakkimizda/" target="_blank">HAKKIMIZDA</a></li>
-                <li><a href="https://furkantuncel55.github.io/YAREN-FURKAN-Zaman-Nasil-Gecti/">ZAMAN NASIL GEÇTI</a></li>
+                <li><a href="https://furkantuncel55.github.io/YAREN-FURKAN-Zaman-Nasil-Gecti/" target="_blank">ZAMAN NASIL GEÇTI</a></li>
             </ul>
             
         </div>
